<resources>
    <string name="app_name">Carifi</string>
    <string name="popular_movies">Popular movies</string>
    <string name="search_result_text">Your search result for </string>
    <string name="title_favorite">Your Favorite</string>
    <string name="release_date">"Release date: "</string>
    <string name="popularity">"Popularity: "</string>
    <string name="vote_average">"Vote average: "</string>
    <string name="vote_count">"Vote count: "</string>
    <string name="title_movie">Movies</string>
    <string name="title_people">People</string>
    <string name="title_tvshow">TvShow</string>
    <string name="title_profile">Profile</string>
    <string name="profile_data_saved">Your data has been saved</string>
    <string name="pick_image_warning">You haven\'t picked Image</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="empty_favorite_item">You don\'t have any favorite item yet</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tvshow">Favorite TvShow</string>
    <string name="favorite_people">Favorite People</string>
    <string name="your_name">Your name</string>
    <string name="save">Save</string>
    <string name="change_language">Click here to change your language</string>
    <string name="search_movies">Search movies</string>
    <string name="search_popular_people">Search popular people</string>
    <string name="popular_people">Popular people</string>
    <string name="gender">"Gender: "</string>
    <string name="department">"Department: "</string>
    <string name="female">"Female"</string>
    <string name="male">"Male"</string>
    <string name="search_tv_show">Search TvShow</string>
    <string name="popular_tvshow">Popular TvShow</string>
    <string name="notif_content_title">Bored?</string>
    <string name="notif_content_text">Let\'s find your favorite movie!</string>
    <string name="connectivity_status">You are offline</string>
    <string name="check_your_internet_connection">Please check your internet connection and try again</string>
    <string name="try_again">try again</string>
    <string name="permission_is_required">Permission is required</string>
    <string name="require_permission_explanation">In order to get your profile picture through camera, this app require camera permission</string>
    <string name="back">Back</string>
</resources>